File Name: CHANGES

04/29/2015 FASP 1.7.3:
- Fix a bug: cmake does not recognize CC env variable sometimes.

04/26/2015 FASP 1.7.2:
- Fix a bug: Output of Krylov methods with saft-net.
- Move the NAN checking so that Fortran NaN runtime exception does not appear.
- Remove some unwanted test code.
- Fix a bug: ILU setup memory allocation size is not right.
- Fix a bug: Change ILU static memory to dynamic allocation.
- Change MUMPS search directory.
- Change back default setting: Not using MUMPS.
- Update documentation and website. 

04/13/2015 FASP 1.7.1:
- Fix a bug: Add a lower bound for quality_bound.
- Fix a bug: Invert small dense matrices with zero diagonal entries.
- Fix a problem with the web version: missing Doxygen setting file.
- Update the webpage and documentation.
- Add Guass elmination with pivoting.
- Update regression test results.
- Revise TODO list.

03/24/2015 FASP 1.7.0:
- Add a parameter for aggregation quality bound.
- Add an adaptive strategy to choose quality bound.
- Fix a bug in input.c: skip unknown keywords.
- Fix a bug in printing parameters.
- Fix a bug in initializing AMG parameters.
- Slightly change the print out.
- Update ini data files: add AMG_quality_bound.
- Update regression test results.
- Update documentation and website.

03/19/2015 FASP 1.6.9:
- Clean up some redundant code.
- Update regression test results.
- Fix problems in DEBUG MODE; add DEBUG output level.
- Fix relative residual print out bug in vFGMRES.
- Add a script for clean up executables.
- Clean up comments in iterative methods.

02/25/2015 FASP 1.6.8:
- Further clean up Doxygen.
- Unify output messages, fix several print problems.
- Fix multiple Doxgen problems.
- Fix a few warning in DEBUG compiler setting.
- TABs are changed to SPACEs: done!
- Clean up code for better style.
- Update developer information in Doxygen.
- Update block preconditioners.
- Update documentation and webpage.

02/06/2015 FASP 1.6.7:
- Remove ISTART, N2C, and C2N.